--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
 <head>
@@ -161,6 +162,8 @@
 <body>
   <div id="scroll-progress"></div>
   <div id="root"></div>
+  <!-- Application Entry Point -->
+  <script type="module" src="/index.tsx"></script>
   <script>
     const observer = new IntersectionObserver((entries) => {
       entries.forEach(entry => {
